[package]
name = "nclip"
version = "1.0.0"
authors = ["Tsukasa Arima"]
edition = "2021"

[lib]
doctest = false

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
strum = { version = "0.25", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
# reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json", "multipart", "stream"] }
# reqwest-middleware = "0.2"
# reqwest-retry = "0.2"
# reqwest-tracing = "0.4"
# url = "2.3"
arboard = "3.2"
# itertools = "0.11"
# tracing = "0.1"
