[package]
name = "nclip"
version = "1.0.0"
authors = ["Tsukasa Arima"]
edition = "2021"

[lib]
doctest = false

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
strum = { version = "0.25", features = ["derive"] }
# tokio = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["macros", "signal"] }
salvo = { version = "0.58", features = ["quinn"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
# tracing-subscriber = { version = "0.3", features = ["json", "registry", "std", "env-filter"] }
# tracing-serde = "0.1"
# tracing-serde-structured = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json", "multipart", "stream"] }
# reqwest-middleware = "0.2"
# reqwest-retry = "0.2"
# reqwest-tracing = "0.4"
# url = "2.3"
arboard = "3.2"
clap = { version = "4.4", features = ["derive"] }
# itertools = "0.11"
# tracing = "0.1"
